helix/.config/helix/runtime/grammars/sources/lpf/test/corpus/sysconfig.txt
======
single key value pair
======

SYSCONFIG CONFIG_IOVOLTAGE=1.2;

---
(source_file
	(sysconfig (key_value (identifier) (number))))

======
multiple sysconfigs
======

SYSCONFIG COMPRESS_CONFIG=1.2 SLAVE_PARALLEL_PORT=ENABLE;

---
(source_file
	(sysconfig
		(key_value (identifier) (number))
		(key_value (identifier) (identifier))))

====
LOCATE_COMP
====

LOCATE COMP "signal_name" SITE "pin_name";

---

(source_file
	(locate_comp
		(string)
		(string)))

===
Frequency port
===

FREQUENCY PORT "clk" 25 MHZ;
FREQUENCY PORT "clk" 25 KHZ;
FREQUENCY PORT "clk" 25 HZ;

---

(source_file
	(frequency_port (string) (number))
	(frequency_port (string) (number))
	(frequency_port (string) (number)))

===
IOBUF FPORT
===

IOBUF PORT "pin_name" IO_TYPE=LVDS OPENDRAIN=ON;

---

(source_file
	(iobuf_port
		(string)
		(key_value
			(identifier)
			(identifier))
		(key_value
			(identifier)
			(identifier))))

===
block
===

BLOCK RESETPATHS;
BLOCK ASYNCPATHS;

---

(source_file
	(block (identifier))
	(block (identifier)))

